# mcp-sapcli

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  sapcli-mcp.json  start-mcp.py
.github/workflows/: ci.yml
doc/: feature_write_source_code.md
src/: sapcli-mcp-client.py  sapcli-mcp-server.py
src/sapclimcp/: __main__.py  argparsertool.py  cli.py  config.py  errors.py  mcptools.py  server.py  toolpatches.py
tests/: test_argparsertool.py  test_cli_and_server.py  test_config.py  test_errors.py  test_sapcli_mcp_server.py  test_toolpatches.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_00_connectivity.py  test_01_package.py  test_02_program.py  test_03_class.py  test_04_interface.py  test_05_functiongroup.py  test_06_ddl.py  test_07_table.py  test_08_structure.py
