[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sapcli"
version = "0.1.0"
description = "MCP server exposing sapcli (SAP ABAP) commands as tools"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pydantic",
    "pyodata",
    "sapcli @ git+https://github.com/jfilak/sapcli.git@dcd3da2d3fbc0d60d523395ea6d3940eb6979eec",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[project.scripts]
sapcli-mcp = "sapclimcp.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sapclimcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: End-to-end tests requiring a live SAP system",
]
